--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: test
 jobs:
   test:
     container:
-      image: ruby:3.2.2
+      image: ruby:2.7.7
       env:
         DATABASE_URL: postgres://postgres:postgres@postgres:5432/postgres
         ENCRYPTION_KEY: abcdefghijklmn
@@ -19,7 +19,7 @@ jobs:
         set -e
         bundle exec rake db:create
         bundle exec rake db:setup
-        bundle exec rspec -f d
+        bundle exec rspec
     services:
       postgres:
         # Docker Hub image
