--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
      - vault
     volumes:
       - bundle:/usr/local/bundle
-      - .:/app
+      # - .:/app
     environment: &env_base
       PORT: 3333
       DATABASE_URL: postgres://postgres:@db:5432
@@ -36,16 +36,10 @@ services:
       dockerfile: Dockerfile.development
     ports: []
     command: sleep infinity
-    volumes:
-      - bundle:/usr/local/bundle
-      - .:/app
   worker:
     <<: *app_base
     ports: []
     command: rake jobs:work
-    volumes:
-      - bundle:/usr/local/bundle
-      - .:/app
   db:
     image: postgres:11
     environment:
