Docker pid fix, prod config needs storage.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.5'
+version: '3.8'
 services:
   web: &app_base
     depends_on:
@@ -18,7 +18,10 @@ services:
     volumes:
       - bundle:/usr/local/bundle
       - .:/app
+    tmpfs:
+      - /tmp/pids/
     environment: &env_base
+      PIDFILE: /tmp/pids/server.pid
       PORT: 3333
       DATABASE_URL: postgres://postgres:@db:5432
       ENCRYPTION_KEY: abcdefghijklmn
@@ -26,6 +29,8 @@ services:
       GITHUB_DEVELOPER_TEAM: ''
       GITHUB_ADMIN_TEAM: 'developers'
       RAILS_ENV: development
+      # RAILS_ENV: production
+      # SECRET_KEY_BASE: abcdefghijklmn
       # Uncomment to use vault auth
       # VAULT_URL: http://vault:8200
       # VAULT_PATH_PREFIX: degica
