--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.5'
+version: '3.8'
 services:
   web: &app_base
     depends_on:
@@ -9,7 +9,7 @@ services:
       dockerfile: Dockerfile
     ports:
      - "3333:3333"
-    command: rails s -b 0.0.0.0
+    command: rails s -b 0.0.0.0 -P /tmp/server.pid
     stdin_open: true
     tty: true
     links:
@@ -17,7 +17,7 @@ services:
      - vault
     volumes:
       - bundle:/usr/local/bundle
-      # - .:/app
+      - .:/app
     environment: &env_base
       PORT: 3333
       DATABASE_URL: postgres://postgres:@db:5432
@@ -29,6 +29,13 @@ services:
       # Uncomment to use vault auth
       # VAULT_URL: http://vault:8200
       # VAULT_PATH_PREFIX: degica
+  worker:
+    <<: *app_base
+    ports: []
+    command: rake jobs:work
+    volumes:
+      - bundle:/usr/local/bundle
+      - .:/app
   test:
     <<: *app_base
     build:
@@ -36,10 +43,9 @@ services:
       dockerfile: Dockerfile.development
     ports: []
     command: sleep infinity
-  worker:
-    <<: *app_base
-    ports: []
-    command: rake jobs:work
+    volumes:
+      - bundle:/usr/local/bundle
+      - .:/app
   db:
     image: postgres:11
     environment:
