fix syntax errors and for non-module code

--- a/barcelona.yml
+++ b/barcelona.yml
@@ -26,10 +26,7 @@ environments:
     name: barcelona
     image_name: public.ecr.aws/degica/barcelona
     before_deploy: rake db:migrate
-    scheduled_tasks:
-      # 10AM JST every week day
-      - schedule: cron(0 1 ? * MON-FRI *)
-        command: bin/chaos
+    scheduled_tasks: []
     services:
       - name: web
         service_type: web
@@ -45,3 +42,4 @@ environments:
         command: rake jobs:work
         cpu: 128
         memory: 256
+ 
