--- a/dockerfiles/run-pack/Dockerfile
+++ b/dockerfiles/run-pack/Dockerfile
@@ -1,16 +1,10 @@
-FROM alpine:3.5
-
-ENV GOPATH /.go
-ENV GOBIN $GOPATH/bin
-ENV PATH=$GOBIN:$PATH
+FROM alpine
 
 ADD . /.go/src/app
 
-RUN apk add --no-cache go curl git gcc libc-dev glide \
-  && cd $GOPATH/src/app \
-  && mkdir -p $GOBIN \
+RUN apk add --no-cache go curl git gcc libc-dev \
+  && cd /.go/src/app \
   && mkdir /barcelona \
-  && glide install \
   && go build -o /barcelona/barcelona-run --ldflags '-linkmode external -extldflags "-static"' \
   && rm -rf /.go \
   && apk del --purge go curl git gcc libc-dev
