--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         apk add --no-cache python3 py3-pip
         find /usr/lib/ -type f -name 'EXTERNALLY-MANAGED' -delete
         pip3 install awscli
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: setup
       run: git submodule update --init
     - name: script
@@ -39,13 +39,13 @@ jobs:
 
   deploy:
     container:
-      image: degica/rails-buildpack:2.6.5-stretch
+      image: public.ecr.aws/degica/rails-buildpack:latest
       env:
         BARCELONA_ENDPOINT: https://barcelona.degica.com
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     needs: [build]
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: deploy_setup
       if: github.ref == 'refs/heads/master'
       run: |-
