Try to use Ubuntu 22.04

--- a/.github/workflows/build-reverse-proxy.yml
+++ b/.github/workflows/build-reverse-proxy.yml
@@ -1,7 +1,7 @@
 name: build-reverse-proxy
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v3
     - name: startup
