--- a/.github/workflows/build-reverse-proxy.yml
+++ b/.github/workflows/build-reverse-proxy.yml
@@ -1,13 +1,13 @@
 name: build-reverse-proxy
 jobs:
   test:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: startup
       run: |
         cd dockerfiles/reverse-proxy
-        docker-compose -f docker-compose.test.yml up --build -d
+        docker compose -f docker-compose.test.yml up --build -d
     - name: test
       run: |
         sleep 10
